# final-taller-1-irc-rust

./: .gitignore  Cargo.toml  README.md  ejemplo.txt  operators_test.csv  server_cinco_config.csv  server_cuatro_config.csv  server_dos_config.csv  server_tres_config.csv  trusted_servers.csv
emisor/: ejemplo.txt
logs/: log1.txt
pruebas_final/: 00_client.rs  00_server.rs  conexion_ddc.rs  conexion_ddc_conect.rs
src/: app_errors.rs  client-main.rs  client.rs  config.rs  config_client.rs  controller.rs  lib.rs  main_gtk.rs  report.xml  server-main.rs  server.rs
src/client/: away_mode.rs
src/controller/: connect.glade  connect.glade~  connect.rs
src/controller/connect/: #login.glade#  login.glade  login.glade~  login.rs
src/controller/connect/login/: OLD_entry_dialog_choose_file.glade  chat.rs  dcc_chat_window.glade  dcc_solicitud_dialog.glade  dcc_solicitud_dialog.glade~  double_entry_dialog.glade  double_entry_dialog.glade~  entry_dialog_choose_file.glade~  entry_dialog_resume_file.glade  entry_dialog_resume_file.glade~  irc_chat.glade  irc_chat.glade~  irc_chat_chiquito.glade  irc_chat_chiquito.glade~
src/server/: channel.rs  client_s.rs  clients_info.rs  logger.rs
src/server/client_s/: client_status.rs  message.rs
src/server/client_s/message/: command.rs
tests/: integration_test.rs
tests/common/: mod.rs
tests/test_files/: invalid_csv_file  log_file_1  log_file_2  valid_config_file  valid_operators
