[package]
name = "irc_2c_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gtk = "^0"#{ git = "https://github.com/gtk-rs/gtk3-rs.git" }
# glib = "^0"
gtk = "0.17.0"
glib = "0.17.2"

#[dependencies]
#glib = { version = "0.13", git = "https://github.com/gtk-rs/gtk-rs-core.git"}


[[bin]]
name = "client"
path = "src/client-main.rs"

[[bin]]
name = "server"
path = "src/server-main.rs"

[[bin]]
name = "client-gtk"
path = "src/main_gtk.rs"

[[bin]]
name = "cl1"
path = "pruebas_final/00_client.rs"

[[bin]]
name = "cl2"
path = "pruebas_final/00_server.rs"


[[bin]]
name = "dcc"
path = "pruebas_final/conexion_ddc.rs"
